<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profil">

    <fragment
        android:id="@+id/profil"
        android:name="com.ticandroid.baley_labeye.activities.ui.profil.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ticandroid.baley_labeye.activities.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ticandroid.baley_labeye.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>