<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConnexionActivity">

    <TextView
        android:id="@+id/lbl_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/connection_title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_inscription"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:hint="@string/connection_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/connection_pwd"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_light_background"
        android:textColor="@color/black"
        android:text="@string/connection_log_in"
        android:id="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="50dp"/>

</RelativeLayout>