<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/x5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.051983584"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/y95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1462dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/x95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="822dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/y5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_museum_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toTopOf="@+id/x5" />

    <TextView
        android:id="@+id/tv_museum_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/museum_location"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_name" />

    <TextView
        android:id="@+id/tv_museum_location_filler"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/x95"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_location" />

    <TextView
        android:id="@+id/tv_museum_phone_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/museum_phone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_location_filler" />

    <TextView
        android:id="@+id/tv_museum_phone"
        android:layout_width="256dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/x95"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_phone_lbl" />

    <TextView
        android:id="@+id/tv_dst_to_museum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/distance_to_museum"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_phone" />

    <TextView
        android:id="@+id/tv_dst_to_museum_filler"
        android:layout_width="370dp"
        android:layout_height="107dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/x95"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_dst_to_museum" />

    <TextView
        android:id="@+id/tv_curr_dt"
        android:layout_width="153dp"
        android:layout_height="20dp"
        android:text="@string/current_datetime"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/y95"
        app:layout_constraintEnd_toStartOf="@+id/x95" />

    <Button
        android:id="@+id/btn_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_my_location"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/y95"
        app:layout_constraintEnd_toStartOf="@+id/x95"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_dst_to_museum"
        app:layout_constraintVertical_bias="0.803" />

    <ImageView
        android:id="@+id/logo_go_to"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/simple_logo"
        app:layout_constraintEnd_toStartOf="@+id/tv_dst_to_museum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_phone"
        app:srcCompat="@android:drawable/ic_menu_directions" />

    <ImageView
        android:id="@+id/logo_location"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/simple_logo"
        app:layout_constraintEnd_toStartOf="@+id/tv_museum_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_name"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <ImageView
        android:id="@+id/logo_phone"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/simple_logo"
        app:layout_constraintEnd_toStartOf="@+id/tv_museum_phone_lbl"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/y5"
        app:layout_constraintTop_toTopOf="@+id/tv_museum_location_filler"
        app:srcCompat="@android:drawable/sym_action_call" />

</androidx.constraintlayout.widget.ConstraintLayout>